--- a/prak1/index.html
+++ b/prak1/index.html
@@ -112,6 +112,18 @@
         </ul>
     </div>
     <div class="container">
+        <h2>Video Pembelajaran</h2>
+        <p>Video Tag</p>
+        <video controls width="70%">
+            <source src="/prak1/cat.mp4" type="video/mp4">
+            Browser Anda tidak mendukung tag video. Silakan unduh video <a href="/prak1/cat.mp4">di sini</a>.
+        </video>
+        <p>Youtube Embed</p>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
+    </div>
+    <div class="container">
         <h2>Form Pendaftaran STIKTEK Bontang</h2>
         <form>
         <table class="form-table">
@@ -147,5 +159,6 @@
         </table>
             <input type="submit" value="Daftar">
         </form>
+    </div>
 </body>
 </html>
